# DeepLearningDeployment

./: readme.md
PyTorchYOLOv3Example/: main.py  prepare_yolov3.sh  readme.md  server.py
PyTorchYOLOv3Example/templates/: upload.html  upload_ok.html
SimplestNCNNExample/app/: build.gradle
SimplestNCNNExample/app/src/androidTest/java/com/example/simplestncnnexample/: ExampleInstrumentedTest.java
SimplestNCNNExample/app/src/main/: AndroidManifest.xml
SimplestNCNNExample/app/src/main/cpp/: CMakeLists.txt  model.cpp  model.h  model.h___jb_old___  native-lib.cpp
SimplestNCNNExample/app/src/main/java/com/example/simplestncnnexample/: MainActivity.java
SimplestNCNNExample/app/src/main/res/values/: strings.xml
SimplestNCNNExample/app/src/test/java/com/example/simplestncnnexample/: ExampleUnitTest.java
SimplestNCNNExample/gradle/wrapper/: gradle-wrapper.properties
ocr/: readme.md  settings.gradle
ocr/app/: build.gradle
ocr/app/src/androidTest/java/com/example/ocr/: ExampleInstrumentedTest.java
ocr/app/src/main/: AndroidManifest.xml
ocr/app/src/main/cpp/: CMakeLists.txt  model.cpp  model.h  native-lib.cpp  ocr.cpp  ocr.h  utils.h
ocr/app/src/main/java/com/example/ocr/: MainActivity.java
ocr/app/src/main/res/layout/: activity_main.xml
ocr/app/src/main/res/values/: strings.xml  themes.xml
ocr/app/src/main/res/values-night/: themes.xml
ocr/app/src/test/java/com/example/ocr/: ExampleUnitTest.java
ocr/gradle/wrapper/: gradle-wrapper.properties
